--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="row">
     <div class="nav-wrapper">
-      <span class="brand-logo center">Lista zadań</span>
+      <span class="brand-logo center">{{title}}</span>
     </div>
   </nav>
 
@@ -11,11 +11,7 @@
   </div>
 
   <div class="row">
-    <input
-      class="col s8"
-      type="text"
-      placeholder="Dodaj zadanie i datę wykonania"
-    />
+    <input class="col s8" type="text" placeholder="Dodaj zadanie i datę wykonania" />
     <input class="col s2 disabled" type="date" />
     <button class="btn-floating">+</button>
   </div>
@@ -44,7 +40,7 @@
   <footer class="page-footer mt-5">
     <div class="footer-copyright">
       <div class="container">
-        2020 © Lista zadań,All rights reserved.
+        {{footer}}
       </div>
     </div>
   </footer>
