handle data date

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,11 @@
 
   <div class="row">
     <input class="col s8" type="text" placeholder="Dodaj zadanie i datę wykonania" #nameInput />
-    <input class="col s2 disabled" type="date" />
-    <button class="btn-floating" (click)="createTask(nameInput.value); nameInput.value = ''">+</button>
+    <input class="col s2 disabled" type="date" #dataInput />
+    <button class="btn-floating" (click)="
+    createTask(nameInput.value, dataInput.value); 
+    nameInput.value = '';
+    dataInput.value = ''">+</button>
   </div>
 
   <ul class="collection">
